# python-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
tests/: test_example.py
