[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Landon Gingerich <landon.ging@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.3"
openai = "^1.3.7"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
